# Crow

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  helloworld.cpp
include/crow/: logging.h
main/: CMakeLists.txt  crow.service  stage_instrument.cpp
updater/: localVersion.txt
